Disable earthly strict for build.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,4 +48,5 @@ jobs:
           version: v0.8.13
           use-cache: true
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
-      - run: earthly --ci --github-annotations +build
+      - run: earthly --ci --github-annotations --strict=false +build
+
